--- a/resources/configuration/extract_haskell.cfg
+++ b/resources/configuration/extract_haskell.cfg
@@ -1,13 +1,9 @@
 {
-	"DataSet": {
+	"dataset": {
 		"outputLocation":			"resources/extracted/"
 	},
 	
-	"ScanMode": {
-		"DEFAULT_PROGRESS_STEPS":	"15"
-	},
-	
-	"DefaultLanguages": [
+	"language": [
 		{	"name": 			"Haskell",
 			"filePattern":		"*.hs",
 			"projectsPath": 	"I:/Haskell/cloned-projects",
