--- a/resources/configuration/javaUnfit.cfg
+++ b/resources/configuration/javaUnfit.cfg
@@ -1,26 +1,37 @@
 {
-	"DefaultLanguages": [
+	"language": [
 		{	"name": 			"Java",
 			"filePattern":		"*.java",
-			"projectsPath": 	"../AuToCa/resources/testprojects/Thesis/",
+			"projectsPath": 	"../AuToCa/resources/testprojects/Java/",
 			"tokenPath":		"../AuToCa/resources/java_keywords.txt",
-			"projectSizeLimit":	"1",
-			"minAmountOfProjects": "1"}
+			"projectSizeLimit":	"600000000",
+			"minAmountOfProjects": "4"}
 	],
 
-	"DB": {
-		"FILENAME":		".thesisNon_autoca",
+	"database": {
+		"FILENAME":		".javaUnfit_autoca",
 		"DRIVER":		"org.h2.Driver",
 		"USER":			"sa",
 		"PASSWORD":		"",
-		"LOGINPREFIX":	"jdbc:h2:"
+		"LOGINPREFIX":	"jdbc:h2:",
+
+		"outputLocation":			"resources/databases/",
+		
+		"TEMPORARY": 	"temporary",
+		"TEMPFILTER":	"temporary_filter",
+		"OCCURENCE":	"occurences",
+		"TOKEN":		"tokens",
+		"FILE":			"files",
+		"PROJECT":		"projects",
+		"LANGUAGE":		"languages", 
+		"RESULTTABLE":	"resulttable",
+		"RANK":			"rank_",
+		"PREFIXSTAT":	"LStat_",
+		"PRECISION":	"precision_", 
+		"SUMMARY":		"summary_"
 	},
 	
-	"DataSet": {
-		"outputLocation":			"resources/databases/"
-	},
-	
-	"FilterChains": [		
+	"filterchains": [		
 		{	"resultName": "_Newl_Int_Up_Sub",
 			"languages": [
 				{"name": 	"Java"}
@@ -73,15 +84,12 @@
 		}			
 	],
 	
-	"Tokenizer": {
+	"tokenizer": {
 		"DEFAULT_LS": 				"\n",
 		"DEFAULT_WORD": 			"[a-zA-Z]\\w+",
 		"DEFAULT_STRING": 			"(?s)\".*?\"",
 		"DEFAULT_MULTI_COMMENT":	"(?s)/\\*.*?\\*/",
-		"DEFAULT_SINGLE_COMMENT":	"(?s)//.*?\n",
-			
-		"PYTHON_LIKE_COMMENT": 		"(?s)#.*?\n",
-			
+		"DEFAULT_SINGLE_COMMENT":	"(?s)//.*?\n",			
 		"WHITESPACE":				"[ \t]+",
 		"START_OF_LINE": 			"(?m)^[ \t]*",
 		"NEWLINE": 					"\n",
@@ -89,8 +97,8 @@
 		"EMPTYLINE":				"(?m)^[ \t]*\n"	
 	},
 	
-	"DBTokenHandler": {
-		"DEFAULT_MAX_TOKEN_LENGTH":	"100",
+	"tokenhandler": {
+		"DEFAULT_MAX_TOKEN_LENGTH":	"17",
 		"DEFAULT_MIN_TOKEN_LENGTH":	"1",
 		
 		"DBNEWLINE":"#newline",
@@ -100,24 +108,5 @@
 		"COMMENT":	"#comment",
 		"DELIMITER":"#delimiter",
 		"LONGWORD":	"#longword"
-	},
-		
-	"Tables": {
-		"TEMPORARY": 	"temporary",
-		"TEMPFILTER":	"temporary_filter",
-		"OCCURENCE":	"occurences",
-		"TOKEN":		"tokens",
-		"FILE":			"files",
-		"PROJECT":		"projects",
-		"LANGUAGE":		"languages", 
-		"RESULTTABLE":	"resulttable",
-		"RANK":			"rank_",
-		"PREFIXSTAT":	"LStat_",
-		"PRECISION":	"precision_", 
-		"SUMMARY":	"summary_"
-	},
-		
-	"ScanMode": {
-		"DEFAULT_PROGRESS_STEPS":	"15"
 	}
 }
