--- a/resources/configuration/pythonUnfit.cfg
+++ b/resources/configuration/pythonUnfit.cfg
@@ -1,115 +1,22 @@
 {
-	"DefaultLanguages": [
-		{	"name": 			"Haskell",
-			"filePattern":		"*.hs",
-			"projectsPath": 	"../AuToCa/resources/testprojects/Haskell/",
-			"tokenPath":		"../AuToCa/resources/haskell_keywords.txt",
+	"language": [
+		{	"name": 			"Python",
+			"filePattern":		"*.py",
+			"projectsPath": 	"../AuToCa/resources/testprojects/Python/",
+			"tokenPath":		"../AuToCa/resources/python_keywords.txt",
 			"projectSizeLimit":	"600000000",
 			"minAmountOfProjects": "4"}
 	],
 
-	"DB": {
-		"FILENAME":		".haskellNon_autoca",
+	"database": {
+		"FILENAME":		".pythonUnfit_autoca",
 		"DRIVER":		"org.h2.Driver",
 		"USER":			"sa",
 		"PASSWORD":		"",
-		"LOGINPREFIX":	"jdbc:h2:"
-	},
-	
-	"DataSet": {
-		"outputLocation":			"resources/databases/"
-	},
-	
-	"FilterChains": [
-		{	"resultName": "_Global_Int_Up_Sub",
-			"languages": [
-				{"name": 	"Haskell"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "save": "true"},
-				{"name": "IntersectFilter",
-				"minOccInProject": "2"},	
-				{"name": "SubStringFilter",
-				 "subString": "#"},
-				{"name": "UpCaseFilter"},
-				{"name": "GlobalFilter"}
-			]
-		},		
-		{	"resultName": "_Coverage_Int_Up_Sub",
-			"languages": [
-				{"name": 	"Haskell"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "save": "true"},
-				{"name": "IntersectFilter",
-				"minOccInProject": "2"},	
-				{"name": "SubStringFilter",
-				 "subString": "#"},
-				{"name": "UpCaseFilter"},
-				{"name": "CoverageFilter"}
-			]
-		},		
-		{	"resultName": "_Newline_Int_Up_Sub",
-			"languages": [
-				{"name": 	"Haskell"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "save": "true"},
-				{"name": "IntersectFilter",
-				"minOccInProject": "2"},	
-				{"name": "SubStringFilter",
-				 "subString": "#"},
-				{"name": "UpCaseFilter"},
-				{"name": "NewlineFilter"}
-			]
-		},			
-		{	"resultName": "_RealIndent_Int_Up_Sub",
-			"languages": [
-				{"name": 	"Haskell"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "save": "true"},
-				{"name": "IntersectFilter",
-				"minOccInProject": "2"},	
-				{"name": "SubStringFilter",
-				 "subString": "#"},
-				{"name": "UpCaseFilter"},
-				{"name": "RealIndentFilter"}
-			]
-		}			
-	],
-	
-	"Tokenizer": {
-		"DEFAULT_LS": 				"\n",
-		"DEFAULT_WORD": 			"[a-zA-Z]\\w+",
-		"DEFAULT_STRING": 			"(?s)\".*?\"",
-		"DEFAULT_MULTI_COMMENT":	"(?s)/\\*.*?\\*/",
-		"DEFAULT_SINGLE_COMMENT":	"(?s)//.*?\n",			
-		"WHITESPACE":				"[ \t]+",
-		"START_OF_LINE": 			"(?m)^[ \t]*",
-		"NEWLINE": 					"\n",
-		"TABSPACE":					"    ",	
-		"EMPTYLINE":				"(?m)^[ \t]*\n"	
-	},
-	
-	"DBTokenHandler": {
-		"DEFAULT_MAX_TOKEN_LENGTH":	"17",
-		"DEFAULT_MIN_TOKEN_LENGTH":	"1",
+		"LOGINPREFIX":	"jdbc:h2:",
+
+		"outputLocation":			"resources/databases/",
 		
-		"DBNEWLINE":"#newline",
-		"DEDENT":	"#dedent",
-		"INDENT":	"#indent",
-		"STRING":	"#string",
-		"COMMENT":	"#comment",
-		"DELIMITER":"#delimiter",
-		"LONGWORD":	"#longword"
-	},
-	
-	"Tables": {
 		"TEMPORARY": 	"temporary",
 		"TEMPFILTER":	"temporary_filter",
 		"OCCURENCE":	"occurences",
@@ -121,10 +28,95 @@
 		"RANK":			"rank_",
 		"PREFIXSTAT":	"LStat_",
 		"PRECISION":	"precision_", 
-		"SUMMARY":	"summary_"
+		"SUMMARY":		"summary_"
 	},
 	
-	"ScanMode": {
-		"DEFAULT_PROGRESS_STEPS":	"15"
+	"filterchains": [
+		{	"resultName": "_Newl_Int_Up_Sub",
+			"languages": [
+				{"name": 	"Python"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "save": "true"},
+				{"name": "IntersectFilter",
+				 "minOccInProject": "2"},			 
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "NewlineFilter"}
+			]
+		},			
+		{	"resultName": "_Glo_Int_Up_Sub",
+			"languages": [
+				{"name": 	"Python"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "save": "true"},
+				{"name": "IntersectFilter",
+				"minOccInProject": "2"},			 
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "GlobalFilter"}
+			]
+		},			
+		{	"resultName": "_Cov_Int_Up_Sub",
+			"languages": [
+				{"name": 	"Python"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "save": "true"},
+				{"name": "IntersectFilter", 
+				"minOccInProject": "2"},			 
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "CoverageFilter"}
+			]
+		},		
+		{	"resultName": "_RealInd_Int_Up_Sub",
+			"languages": [
+				{"name": 	"Python"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "save": "true"},
+				{"name": "IntersectFilter", 
+				"minOccInProject": "2"},			 
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "RealIndentFilter"}
+			]
+		}				
+	],
+	
+	"tokenizer": {
+		"DEFAULT_LS": 				"\n",
+		"DEFAULT_WORD": 			"[a-zA-Z]\\w+",
+		"DEFAULT_STRING": 			"(?s)\".*?\"",
+		"DEFAULT_MULTI_COMMENT":	"(?s)/\\*.*?\\*/",
+		"DEFAULT_SINGLE_COMMENT":	"(?s)//.*?\n",		
+		"WHITESPACE":				"[ \t]+",
+		"START_OF_LINE": 			"(?m)^[ \t]*",
+		"NEWLINE": 					"\n",
+		"TABSPACE":					"    ",	
+		"EMPTYLINE":				"(?m)^[ \t]*\n"	
+	},
+	
+	"tokenhandler": {
+		"DEFAULT_MAX_TOKEN_LENGTH":	"17",
+		"DEFAULT_MIN_TOKEN_LENGTH":	"1",
+		
+		"DBNEWLINE":"#newline",
+		"DEDENT":	"#dedent",
+		"INDENT":	"#indent",
+		"STRING":	"#string",
+		"COMMENT":	"#comment",
+		"DELIMITER":	"#delimiter",
+		"LONGWORD":	"#longword"
 	}
 }
