--- a/resources/configuration/thesis.cfg
+++ b/resources/configuration/thesis.cfg
@@ -1,20 +1,20 @@
 {
 	"language": [
-		{	"name": 			"Haskell",
-			"filePattern":		"*.hs",
-			"projectsPath": 	"../AuToCa/resources/testprojects/Haskell/",
-			"tokenPath":		"../AuToCa/resources/haskell_keywords.txt",
+		{	"name": 			"Java",
+			"filePattern":		"*.java",
+			"projectsPath": 	"../AuToCa/resources/testprojects/Thesis/",
+			"tokenPath":		"../AuToCa/resources/java_keywords.txt",
 			"projectSizeLimit":	"600000000",
 			"minAmountOfProjects": "4"}
 	],
 
 	"database": {
-		"FILENAME":		".haskell_autoca",
+		"FILENAME":		".apache_autoca",
 		"DRIVER":		"org.h2.Driver",
 		"USER":			"sa",
 		"PASSWORD":		"",
 		"LOGINPREFIX":	"jdbc:h2:",
-
+		
 		"outputLocation":			"resources/databases/",
 		
 		"TEMPORARY": 	"temporary",
@@ -31,75 +31,55 @@
 		"SUMMARY":		"summary_"
 	},
 	
-	"filterchains": [
-		{	"resultName": "_Global_Int_Up_Sub",
+	"filterchains": [		
+		{	"resultName": "_Newl_Int_Up_Sub",
 			"languages": [
-				{"name": 	"Haskell"}
+				{"name": 	"Java"}
 			],
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
-				{"name": "IntersectFilter",
-				"minOccInProject": "2"},	
-				{"name": "SubStringFilter",
-				 "subString": "#"},
-				{"name": "UpCaseFilter"},
-				{"name": "GlobalFilter"}
-			]
-		},		
-		{	"resultName": "_Coverage_Int_Up_Sub",
-			"languages": [
-				{"name": 	"Haskell"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "save": "true"},
-				{"name": "IntersectFilter",
-				"minOccInProject": "2"},	
-				{"name": "SubStringFilter",
-				 "subString": "#"},
-				{"name": "UpCaseFilter"},
-				{"name": "CoverageFilter"}
-			]
-		},		
-		{	"resultName": "_Newline_Int_Up_Sub",
-			"languages": [
-				{"name": 	"Haskell"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "save": "true"},
-				{"name": "IntersectFilter",
-				"minOccInProject": "2"},	
-				{"name": "SubStringFilter",
-				 "subString": "#"},
-				{"name": "UpCaseFilter"},
 				{"name": "NewlineFilter"}
 			]
 		},			
-		{	"resultName": "_RealIndent_Int_Up_Sub",
+		{	"resultName": "_Glo_Int_Up_Sub",
 			"languages": [
-				{"name": 	"Haskell"}
+				{"name": 	"Java"}
 			],
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
-				{"name": "IntersectFilter",
-				"minOccInProject": "2"},	
-				{"name": "SubStringFilter",
-				 "subString": "#"},
-				{"name": "UpCaseFilter"},
+				{"name": "GlobalFilter"}
+			]
+		},			
+		{	"resultName": "_Cov_Int_Up_Sub",
+			"languages": [
+				{"name": 	"Java"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "save": "true"},
+				{"name": "CoverageFilter"}
+			]
+		},		
+		{	"resultName": "_RealInd_Int_Up_Sub",
+			"languages": [
+				{"name": 	"Java"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "save": "true"},
 				{"name": "RealIndentFilter"}
 			]
-		}			
+		}		
 	],
 	
 	"tokenizer": {
 		"DEFAULT_LS": 				"\n",
 		"DEFAULT_WORD": 			"[a-zA-Z]\\w+",
 		"DEFAULT_STRING": 			"(?s)\".*?\"",
-		"DEFAULT_MULTI_COMMENT":	"(?s)\\{-.*?-\\}",
-		"DEFAULT_SINGLE_COMMENT":	"(?s)--.*?\n",		
+		"DEFAULT_MULTI_COMMENT":	"(?s)/\\*.*?\\*/",
+		"DEFAULT_SINGLE_COMMENT":	"(?s)//.*?\n",			
 		"WHITESPACE":				"[ \t]+",
 		"START_OF_LINE": 			"(?m)^[ \t]*",
 		"NEWLINE": 					"\n",
@@ -108,7 +88,7 @@
 	},
 	
 	"tokenhandler": {
-		"DEFAULT_MAX_TOKEN_LENGTH":	"17",
+		"DEFAULT_MAX_TOKEN_LENGTH":	"100",
 		"DEFAULT_MIN_TOKEN_LENGTH":	"1",
 		
 		"DBNEWLINE":"#newline",
