--- a/resources/configuration/thesisFilteredvsUnfiltered.cfg
+++ b/resources/configuration/thesisFilteredvsUnfiltered.cfg
@@ -1,26 +1,37 @@
 {
-	"DefaultLanguages": [
+	"language": [
 		{	"name": 			"Java",
 			"filePattern":		"*.java",
 			"projectsPath": 	"../AuToCa/resources/testprojects/Thesis/",
 			"tokenPath":		"../AuToCa/resources/java_keywords.txt",
-			"projectSizeLimit":	"1",
+			"projectSizeLimit":	"6000000000",
 			"minAmountOfProjects": "1"}
 	],
 
-	"DB": {
+	"database": {
 		"FILENAME":		".thesis_apache_autoca",
 		"DRIVER":		"org.h2.Driver",
 		"USER":			"sa",
 		"PASSWORD":		"",
-		"LOGINPREFIX":	"jdbc:h2:"
+		"LOGINPREFIX":	"jdbc:h2:",
+		
+		"outputLocation":			"resources/databases/",
+		
+		"TEMPORARY": 	"temporary",
+		"TEMPFILTER":	"temporary_filter",
+		"OCCURENCE":	"occurences",
+		"TOKEN":		"tokens",
+		"FILE":			"files",
+		"PROJECT":		"projects",
+		"LANGUAGE":		"languages", 
+		"RESULTTABLE":	"resulttable",
+		"RANK":			"rank_",
+		"PREFIXSTAT":	"LStat_",
+		"PRECISION":	"precision_", 
+		"SUMMARY":		"summary_"
 	},
 	
-	"DataSet": {
-		"outputLocation":			"resources/databases/"
-	},
-	
-	"FilterChains": [	
+	"filterchains": [	
 		{	"resultName": "Newline",
 			"languages": [
 				{"name": 	"Java"}
@@ -115,7 +126,7 @@
 		}		
 	],
 	
-	"Tokenizer": {
+	"tokenizer": {
 		"DEFAULT_LS": 				"\n",
 		"DEFAULT_WORD": 			"[a-zA-Z]\\w+",
 		"DEFAULT_STRING": 			"(?s)\".*?\"",
@@ -131,7 +142,7 @@
 		"EMPTYLINE":				"(?m)^[ \t]*\n"	
 	},
 	
-	"DBTokenHandler": {
+	"tokenhandler": {
 		"DEFAULT_MAX_TOKEN_LENGTH":	"17",
 		"DEFAULT_MIN_TOKEN_LENGTH":	"1",
 		
@@ -142,24 +153,5 @@
 		"COMMENT":	"#comment",
 		"DELIMITER":"#delimiter",
 		"LONGWORD":	"#longword"
-	},
-		
-	"Tables": {
-		"TEMPORARY": 	"temporary",
-		"TEMPFILTER":	"temporary_filter",
-		"OCCURENCE":	"occurences",
-		"TOKEN":		"tokens",
-		"FILE":			"files",
-		"PROJECT":		"projects",
-		"LANGUAGE":		"languages", 
-		"RESULTTABLE":	"resulttable",
-		"RANK":			"rank_",
-		"PREFIXSTAT":	"LStat_",
-		"PRECISION":	"precision_", 
-		"SUMMARY":	"summary_"
-	},
-		
-	"ScanMode": {
-		"DEFAULT_PROGRESS_STEPS":	"15"
 	}
 }
