--- a/resources/configuration/thesisUnfit.cfg
+++ b/resources/configuration/thesisUnfit.cfg
@@ -1,26 +1,37 @@
 {
-	"DefaultLanguages": [
+	"language": [
 		{	"name": 			"Java",
 			"filePattern":		"*.java",
 			"projectsPath": 	"../AuToCa/resources/testprojects/Thesis/",
 			"tokenPath":		"../AuToCa/resources/java_keywords.txt",
-			"projectSizeLimit":	"600000000",
-			"minAmountOfProjects": "4"}
+			"projectSizeLimit":	"6000000000",
+			"minAmountOfProjects": "1"}
 	],
 
-	"DB": {
-		"FILENAME":		".apache_autoca",
+	"database": {
+		"FILENAME":		".thesisUnfit_autoca",
 		"DRIVER":		"org.h2.Driver",
 		"USER":			"sa",
 		"PASSWORD":		"",
-		"LOGINPREFIX":	"jdbc:h2:"
+		"LOGINPREFIX":	"jdbc:h2:",
+
+		"outputLocation":			"resources/databases/",
+		
+		"TEMPORARY": 	"temporary",
+		"TEMPFILTER":	"temporary_filter",
+		"OCCURENCE":	"occurences",
+		"TOKEN":		"tokens",
+		"FILE":			"files",
+		"PROJECT":		"projects",
+		"LANGUAGE":		"languages", 
+		"RESULTTABLE":	"resulttable",
+		"RANK":			"rank_",
+		"PREFIXSTAT":	"LStat_",
+		"PRECISION":	"precision_", 
+		"SUMMARY":		"summary_"
 	},
 	
-	"DataSet": {
-		"outputLocation":			"resources/databases/"
-	},
-	
-	"FilterChains": [		
+	"filterchains": [		
 		{	"resultName": "_Newl_Int_Up_Sub",
 			"languages": [
 				{"name": 	"Java"}
@@ -60,15 +71,28 @@
 				 "save": "true"},
 				{"name": "RealIndentFilter"}
 			]
-		}		
+		},			
+		{	"resultName": "_Ind_Int_Up_Sub",
+			"languages": [
+				{"name": 	"Java"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "save": "true"},
+				{"name": "IndentFilter"}
+			]
+		}			
 	],
 	
-	"Tokenizer": {
+	"tokenizer": {
 		"DEFAULT_LS": 				"\n",
 		"DEFAULT_WORD": 			"[a-zA-Z]\\w+",
 		"DEFAULT_STRING": 			"(?s)\".*?\"",
 		"DEFAULT_MULTI_COMMENT":	"(?s)/\\*.*?\\*/",
-		"DEFAULT_SINGLE_COMMENT":	"(?s)//.*?\n",			
+		"DEFAULT_SINGLE_COMMENT":	"(?s)//.*?\n",
+			
+		"PYTHON_LIKE_COMMENT": 		"(?s)#.*?\n",
+			
 		"WHITESPACE":				"[ \t]+",
 		"START_OF_LINE": 			"(?m)^[ \t]*",
 		"NEWLINE": 					"\n",
@@ -76,7 +100,7 @@
 		"EMPTYLINE":				"(?m)^[ \t]*\n"	
 	},
 	
-	"DBTokenHandler": {
+	"tokenhandler": {
 		"DEFAULT_MAX_TOKEN_LENGTH":	"100",
 		"DEFAULT_MIN_TOKEN_LENGTH":	"1",
 		
@@ -87,24 +111,5 @@
 		"COMMENT":	"#comment",
 		"DELIMITER":"#delimiter",
 		"LONGWORD":	"#longword"
-	},
-		
-	"Tables": {
-		"TEMPORARY": 	"temporary",
-		"TEMPFILTER":	"temporary_filter",
-		"OCCURENCE":	"occurences",
-		"TOKEN":		"tokens",
-		"FILE":			"files",
-		"PROJECT":		"projects",
-		"LANGUAGE":		"languages", 
-		"RESULTTABLE":	"resulttable",
-		"RANK":			"rank_",
-		"PREFIXSTAT":	"LStat_",
-		"PRECISION":	"precision_", 
-		"SUMMARY":		"summary_"
-	},
-		
-	"ScanMode": {
-		"DEFAULT_PROGRESS_STEPS":	"15"
 	}
 }
