--- a/resources/configuration/c.cfg
+++ b/resources/configuration/c.cfg
@@ -1,5 +1,5 @@
 {
-	"DefaultLanguages": [
+	"language": [
 		{	"name": 			"C",
 			"filePattern":		"*.c",
 			"projectsPath": 	"../AuToCa/resources/testprojects/C/",
@@ -8,19 +8,30 @@
 			"minAmountOfProjects": "4"}
 	],
 	
-	"DB": {
+	"database": {
 		"FILENAME":		".c_autoca",
 		"DRIVER":		"org.h2.Driver",
 		"USER":			"sa",
 		"PASSWORD":		"",
-		"LOGINPREFIX":	"jdbc:h2:"
+		"LOGINPREFIX":	"jdbc:h2:",
+		
+		"outputLocation":			"resources/databases/",
+		
+		"TEMPORARY": 	"temporary",
+		"TEMPFILTER":	"temporary_filter",
+		"OCCURENCE":	"occurences",
+		"TOKEN":		"tokens",
+		"FILE":			"files",
+		"PROJECT":		"projects",
+		"LANGUAGE":		"languages", 
+		"RESULTTABLE":	"resulttable",
+		"RANK":			"rank_",
+		"PREFIXSTAT":	"LStat_",
+		"PRECISION":	"precision_", 
+		"SUMMARY":		"summary_"
 	},
 	
-	"DataSet": {
-		"outputLocation":			"resources/databases/"
-	},
-	
-	"FilterChains": [
+	"filterchains": [
 		{	"resultName": "_Newl_Int_Up_Sub",
 			"languages": [
 				{"name": 	"C"}
@@ -79,7 +90,7 @@
 		}					
 	],
 	
-	"Tokenizer": {
+	"tokenizer": {
 		"DEFAULT_LS": 				"\n",
 		"DEFAULT_WORD": 			"[a-zA-Z_]\\w+(_\\w+)*",
 		"DEFAULT_STRING": 			"(?s)\".*?\"",
@@ -92,7 +103,7 @@
 		"EMPTYLINE":				"(?m)^[ \t]*\n"	
 	},
 	
-	"DBTokenHandler": {
+	"tokenhandler": {
 		"DEFAULT_MAX_TOKEN_LENGTH":	"17",
 		"DEFAULT_MIN_TOKEN_LENGTH":	"1",
 		
@@ -118,9 +129,5 @@
 		"PREFIXSTAT":	"LStat_",
 		"PRECISION":	"precision_", 		
 		"SUMMARY":	"summary_",
-	},
-	
-	"ScanMode": {
-		"DEFAULT_PROGRESS_STEPS":	"15"
 	}
 }
