--- a/resources/configuration/extract_clojure.cfg
+++ b/resources/configuration/extract_clojure.cfg
@@ -1,13 +1,9 @@
 {
-	"DataSet": {
+	"dataset": {
 		"outputLocation":			"resources/extracted/"
 	},
 	
-	"ScanMode": {
-		"DEFAULT_PROGRESS_STEPS":	"15"
-	},
-	
-	"DefaultLanguages": [
+	"language": [
 		{	"name": 			"Clojure",
 			"filePattern":		"*.clj",
 			"projectsPath": 	"I:/Clojure/cloned-projects",
