--- a/resources/configuration/extract_python.cfg
+++ b/resources/configuration/extract_python.cfg
@@ -1,13 +1,9 @@
 {
-	"DataSet": {
+	"dataset": {
 		"outputLocation":			"resources/extracted/"
 	},
 	
-	"ScanMode": {
-		"DEFAULT_PROGRESS_STEPS":	"15"
-	},
-	
-	"DefaultLanguages": [
+	"language": [
 		{	"name": 			"Python",
 			"filePattern":		"*.py",
 			"projectsPath": 	"../AuToCa/resources/testprojects/Python/",
