--- a/resources/configuration/javaIntersectionComparison.cfg
+++ b/resources/configuration/javaIntersectionComparison.cfg
@@ -1,5 +1,5 @@
 {
-	"DefaultLanguages": [
+	"language": [
 		{	"name": 			"Java",
 			"filePattern":		"*.java",
 			"projectsPath": 	"../AuToCa/resources/testprojects/Java/",
@@ -8,19 +8,30 @@
 			"minAmountOfProjects": "4"}
 	],
 
-	"DB": {
-		"FILENAME":		".java_intersection_autoca",
+	"database": {
+		"FILENAME":		".javaIntersectionComparison_autoca",
 		"DRIVER":		"org.h2.Driver",
 		"USER":			"sa",
 		"PASSWORD":		"",
-		"LOGINPREFIX":	"jdbc:h2:"
+		"LOGINPREFIX":	"jdbc:h2:",
+
+		"outputLocation":			"resources/databases/",
+		
+		"TEMPORARY": 	"temporary",
+		"TEMPFILTER":	"temporary_filter",
+		"OCCURENCE":	"occurences",
+		"TOKEN":		"tokens",
+		"FILE":			"files",
+		"PROJECT":		"projects",
+		"LANGUAGE":		"languages", 
+		"RESULTTABLE":	"resulttable",
+		"RANK":			"rank_",
+		"PREFIXSTAT":	"LStat_",
+		"PRECISION":	"precision_", 
+		"SUMMARY":		"summary_"
 	},
 	
-	"DataSet": {
-		"outputLocation":			"resources/databases/"
-	},
-	
-	"FilterChains": [					
+	"filterchains": [					
 		{	"resultName": "Newline30",
 			"languages": [
 				{"name": 	"Java"}
@@ -68,7 +79,7 @@
 		},
 	],
 	
-	"Tokenizer": {
+	"tokenizer": {
 		"DEFAULT_LS": 				"\n",
 		"DEFAULT_WORD": 			"[a-zA-Z]\\w+",
 		"DEFAULT_STRING": 			"(?s)\".*?\"",
@@ -84,7 +95,7 @@
 		"EMPTYLINE":				"(?m)^[ \t]*\n"	
 	},
 	
-	"DBTokenHandler": {
+	"tokenhandler": {
 		"DEFAULT_MAX_TOKEN_LENGTH":	"17",
 		"DEFAULT_MIN_TOKEN_LENGTH":	"1",
 		
@@ -95,24 +106,5 @@
 		"COMMENT":	"#comment",
 		"DELIMITER":"#delimiter",
 		"LONGWORD":	"#longword"
-	},
-		
-	"Tables": {
-		"TEMPORARY": 	"temporary",
-		"TEMPFILTER":	"temporary_filter",
-		"OCCURENCE":	"occurences",
-		"TOKEN":		"tokens",
-		"FILE":			"files",
-		"PROJECT":		"projects",
-		"LANGUAGE":		"languages", 
-		"RESULTTABLE":	"resulttable",
-		"RANK":			"rank_",
-		"PREFIXSTAT":	"LStat_",
-		"PRECISION":	"precision_", 
-		"SUMMARY":	"summary_"		
-	},
-		
-	"ScanMode": {
-		"DEFAULT_PROGRESS_STEPS":	"15"
 	}
 }
