--- a/resources/configuration/scheme.cfg
+++ b/resources/configuration/scheme.cfg
@@ -1,5 +1,5 @@
 {
-	"DefaultLanguages": [
+	"language": [
 		{	"name": 			"Scheme",
 			"filePattern":		"*.scm",
 			"projectsPath": 	"../AuToCa/resources/testprojects/Scheme/",
@@ -8,19 +8,30 @@
 			"minAmountOfProjects": "4"}
 	],
 
-	"DB": {
+	"database": {
 		"FILENAME":		".scheme_autoca",
 		"DRIVER":		"org.h2.Driver",
 		"USER":			"sa",
 		"PASSWORD":		"",
-		"LOGINPREFIX":	"jdbc:h2:"
+		"LOGINPREFIX":	"jdbc:h2:",
+
+		"outputLocation":			"resources/databases/",
+		
+		"TEMPORARY": 	"temporary",
+		"TEMPFILTER":	"temporary_filter",
+		"OCCURENCE":	"occurences",
+		"TOKEN":		"tokens",
+		"FILE":			"files",
+		"PROJECT":		"projects",
+		"LANGUAGE":		"languages", 
+		"RESULTTABLE":	"resulttable",
+		"RANK":			"rank_",
+		"PREFIXSTAT":	"LStat_",
+		"PRECISION":	"precision_", 
+		"SUMMARY":		"summary_"
 	},
 	
-	"DataSet": {
-		"outputLocation":			"resources/databases/"
-	},
-	
-	"FilterChains": [
+	"filterchains": [
 		{	"resultName": "_Global_Int_Up_Sub",
 			"languages": [
 				{"name": 	"Scheme"}
@@ -83,7 +94,7 @@
 		}			
 	],
 	
-	"Tokenizer": {
+	"tokenizer": {
 		"DEFAULT_LS": 				"\n",	
 		"DEFAULT_WORD": 			"[a-zA-Z]\\w+((-\\w+)*[*]?)*(\/\\w+)*",
 		"DEFAULT_STRING": 			"(?s)\".*?\"",
@@ -96,7 +107,7 @@
 		"EMPTYLINE":				"(?m)^[ \t]*\n"	
 	},
 	
-	"DBTokenHandler": {
+	"tokenhandler": {
 		"DEFAULT_MAX_TOKEN_LENGTH":	"30",
 		"DEFAULT_MIN_TOKEN_LENGTH":	"1",
 		
@@ -107,24 +118,5 @@
 		"COMMENT":	"#comment",
 		"DELIMITER":"#delimiter",
 		"LONGWORD":	"#longword"
-	},
-	
-	"Tables": {
-		"TEMPORARY": 	"temporary",
-		"TEMPFILTER":	"temporary_filter",
-		"OCCURENCE":	"occurences",
-		"TOKEN":		"tokens",
-		"FILE":			"files",
-		"PROJECT":		"projects",
-		"LANGUAGE":		"languages", 
-		"RESULTTABLE":	"resulttable",
-		"RANK":			"rank_",
-		"PREFIXSTAT":	"LStat_",
-		"PRECISION":	"precision_", 
-		"SUMMARY":	"summary_"
-	},
-	
-	"ScanMode": {
-		"DEFAULT_PROGRESS_STEPS":	"15"
 	}
 }
