--- a/resources/configuration/extract_haskell.cfg
+++ b/resources/configuration/extract_haskell.cfg
@@ -6,7 +6,7 @@
 	"language": [
 		{	"name": 			"Haskell",
 			"filePattern":		"*.hs",
-			"projectsPath": 	"I:/Haskell/cloned-projects",
+			"projectsPath": 	"../AuToCa/resources/testprojects/Haskell/",
 			"tokenPath":		"../AuToCa/resources/haskell_keywords.txt",
 			"projectSizeLimit":	"50000000",
 			"minAmountOfProjects": "2"}
